@@ -70,6 +70,64 @@ public:
     }
   }
 };
+
+class ScalarWrapper {
+  struct Concept {
+    virtual ~Concept() {}
+    virtual void push() = 0;
+    virtual void set_instance(const void*) = 0;
+    virtual void* get_ptr() = 0;
+    virtual void clear() = 0;
+  };
+  template<typename U, typename V> struct Model : Concept {
+    //    typedef U (*locfcntype)(const V &); 
+    typedef std::function<U(const V&)> locfcntype;
+    explicit Model(locfcntype fcn, top::TreeManager& tree, const char* brname): ptr(new U), fcn(fcn), brname(brname), errored(false) { tree.makeOutputVariable(*ptr, brname); }
+    virtual void set_instance(const void* instance) { this->instance=static_cast<const V*>(instance);}
+    virtual void push() { 
+      // hrm hrm, default = 0 ?  Will do some template magic later if we need to store some non-numeric type
+      try {
+	*ptr = (fcn(*instance));
+      } catch (...) {
+	if (!errored) {
+	  std::cout << "\n **** WARNING!!! Function to extract variable to be stored in " << brname << " threw exception, zero will be stored.  This is your only warning!\n\n";
+	  errored = true;
+	}
+      }
+    }
+    virtual void* get_ptr() { return ptr; }
+    virtual void clear() { *ptr = 0; }
+  private:
+    U* ptr;
+    const locfcntype fcn;
+    const V* instance;
+    std::string brname;
+    bool errored;
+  };
+  boost::scoped_ptr<Concept> object;
+public:
+  //  template<typename U, typename V> explicit VectorWrapper(U (*fcn)(const V &), top::TreeManager& tree, const char* brname) : object(new Model<U,V>(fcn, tree, brname)) {}
+  template<typename U, typename V> explicit ScalarWrapper(std::function<U(const V &)> fcn, top::TreeManager& tree, const char* brname) : object(new Model<U,V>(fcn, tree, brname)) {}
+  void push() { object->push(); }
+  void set_instance(const void* instance) { object->set_instance(instance); }
+  void* get_ptr() { return object->get_ptr(); }
+  void clear() { object->clear(); }
+};
+class ScalarWrapperCollection {
+  std::vector<ScalarWrapper*> sws;
+
+public:
+  ScalarWrapperCollection() {}
+  ScalarWrapperCollection(std::vector<ScalarWrapper*> wrappers) : sws(wrappers) {}
+  template<typename T> void push_all(const T& event) {
+    for (std::vector<ScalarWrapper*>::iterator sw=sws.begin();
+         sw != sws.end(); ++sw) {
+      (*sw)->clear();
+      (*sw)->set_instance(&event);
+      (*sw)->push();
+      }
+    }
+};
 #endif
 
 #endif // TreeAssist_h
