@@ -1,3 +1,7 @@
+2015-06-16 Peter Onyisi <ponyisi AT cern.ch>
+	* add ScalarWrapper to allow clean adding of non-vector variables
+	* reorganize trigger code for easy extensibility
+
 2015-06-16 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonLooseEventSaver.cxx: prelim implementation of d0 and z0 correction for PV position.
 	Note that the corrected d0 is unsigned, needs a final touch!
